All Info Buttons including all contents and Progress Bar is done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="time">TIME:</string>
     <string name="reason_of_completing_this_form">REASON OF COMPLETING THIS FORM:</string>
 
-    <string name="Empty">____</string>
+    <string name="Empty">  </string>
     <string name="Provisional_Problem_Description">Provisional Problem Description</string>
     <string name="None">None</string>
     <string name="Mild">Mild</string>
@@ -39,62 +39,62 @@
     <string name="Not_Known">Not Known</string>
     <string name="anxious_away_from_caregivers">Anxious away from caregivers</string>
 
-    <string name="_1">1</string>
-    <string name="_2">2</string>
-    <string name="_3">3</string>
-    <string name="_4">4</string>
-    <string name="_5">5</string>
-    <string name="_6">6</string>
-    <string name="_7">7</string>
-    <string name="_8">8</string>
-    <string name="_9">9</string>
-    <string name="_10">10</string>
+    <string name="_1">1.</string>
+    <string name="_2">2.</string>
+    <string name="_3">3.</string>
+    <string name="_4">4.</string>
+    <string name="_5">5.</string>
+    <string name="_6">6.</string>
+    <string name="_7">7.</string>
+    <string name="_8">8.</string>
+    <string name="_9">9.</string>
+    <string name="_10">10.</string>
 
-    <string name="_11">11</string>
-    <string name="_12">12</string>
-    <string name="_13">13</string>
-    <string name="_14">14</string>
-    <string name="_15">15</string>
-    <string name="_16">16</string>
-    <string name="_17">17</string>
-    <string name="_18">18</string>
-    <string name="_19">19</string>
-    <string name="_20">20</string>
+    <string name="_11">11.</string>
+    <string name="_12">12.</string>
+    <string name="_13">13.</string>
+    <string name="_14">14.</string>
+    <string name="_15">15.</string>
+    <string name="_16">16.</string>
+    <string name="_17">17.</string>
+    <string name="_18">18.</string>
+    <string name="_19">19.</string>
+    <string name="_20">20.</string>
 
-    <string name="_21">21</string>
-    <string name="_22">22</string>
-    <string name="_23">23</string>
-    <string name="_24">24</string>
-    <string name="_25">25</string>
-    <string name="_26">26</string>
-    <string name="_27">27</string>
-    <string name="_28">28</string>
-    <string name="_29">29</string>
-    <string name="_30">30</string>
+    <string name="_21">21.</string>
+    <string name="_22">22.</string>
+    <string name="_23">23.</string>
+    <string name="_24">24.</string>
+    <string name="_25">25.</string>
+    <string name="_26">26.</string>
+    <string name="_27">27.</string>
+    <string name="_28">28.</string>
+    <string name="_29">29.</string>
+    <string name="_30">30.</string>
 
-    <string name="_31">31</string>
-    <string name="_32">32</string>
-    <string name="_33">33</string>
-    <string name="_34">34</string>
-    <string name="_35">35</string>
-    <string name="_36">36</string>
-    <string name="_37">37</string>
+    <string name="_31">31.</string>
+    <string name="_32">32.</string>
+    <string name="_33">33.</string>
+    <string name="_34">34.</string>
+    <string name="_35">35.</string>
+    <string name="_36">36.</string>
+    <string name="_37">37.</string>
 
 
-    <string name="_38">38</string>
-    <string name="_39">39</string>
-    <string name="_40">40</string>
-    <string name="_41">41</string>
-    <string name="_42">42</string>
-    <string name="_43">43</string>
-    <string name="_44">44</string>
+    <string name="_38">38.</string>
+    <string name="_39">39.</string>
+    <string name="_40">40.</string>
+    <string name="_41">41.</string>
+    <string name="_42">42.</string>
+    <string name="_43">43.</string>
+    <string name="_44">44.</string>
 
-    <string name="_45">45</string>
-    <string name="_46">46</string>
-    <string name="_47">47</string>
-    <string name="_48">48</string>
-    <string name="_49">49</string>
-    <string name="_50">50</string>
+    <string name="_45">45.</string>
+    <string name="_46">46.</string>
+    <string name="_47">47.</string>
+    <string name="_48">48.</string>
+    <string name="_49">49.</string>
+    <string name="_50">50.</string>
 
     <!--Questionnairequestions-->
     <string name="q1">Anxious away from caregivers (Separation anxiety)</string>
@@ -106,7 +106,7 @@
     <string name="q7">Avoids specific things (Specific phobia)</string>
     <string name="q8">Repetitive problematic behaviours (Habit problems)</string>
     <string name="q9">Depression/low mood (Depression)</string>
-    <string name="q10">Self-Harm (Self-injury or self-harm)</string>
+    <string name="q10"> Self-Harm (Self-injury or self-harm)</string>
 
     <string name="q11">Extreme of mood (Bipolar disorder)</string>
     <string name="q12">Delusional beliefs and hallucinations (Psychosis)</string>
