IDE working again and changes to the Help page made.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,4 +172,9 @@
         <item>Date Created: Oldest-Newest</item>
     </string-array>
 
+    <!-- Help Page -->
+
+    <string name="Help_Title">Help Page</string>
+
+
 </resources>
